# agent-harness

./: .gitignore  ARCHITECTURE.md  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
app/: agent.py  app.py  main.py  server.py  tool.py  tools.py
app/providers/: __init__.py  antropic_provider.py  base.py  openai_compat_provider.py  registry.py
app/tools/: __init__.py  base.py  bash.py  permission_policy.py  read_file.py  write_file.py
docs/: 404.html  agent-loop.md  index.html  index.md  introduccion.md  permisos.md  providers.md  tools-basicas.md
docs-md/: api.md  architecture.md  features.md  index.md  introduccion.md  providers.md  tools-basicas.md
docs-md/exec-plans/: PLAN.md
docs/agent-loop/: index.html
docs/api/: index.html
docs/architecture/: index.html
docs/exec-plans/PLAN/: index.html
docs/features/: index.html
docs/introduccion/: index.html
docs/permisos/: index.html
docs/providers/: index.html
docs/search/: search_index.json
docs/tools-basicas/: index.html
tests/: conftest.py  test_agent.py  test_integration.py  test_main.py  test_openai_compat_provider.py  test_providers_base.py  test_server.py  test_tool_registry.py  test_tools.py
