[project]
name = "codecrafters-claude-code"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "loguru>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
