[project]
name = "agent-harness"
version = "0.2.0"
requires-python = ">=3.14"
dependencies = [
    "json-repair>=0.60.1",
    "openai>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "loguru>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
