[project]
name = "agent-harness"
version = "0.2.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "json-repair>=0.60.1",
    "openai>=2.15.0",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "loguru>=0.7",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
